# coxeter_properness

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
apps/: CMakeLists.txt  run.cc
include/coxeter_properness/: search.h
scripts/: 7zip.py
src/: CMakeLists.txt  search.cc
tests/: CMakeLists.txt  test_properness.cc
